[package]
name = "code_prompt"
version = "0.1.1"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
description = "Combine files into a single knowledge base file for LLMs"

[dependencies]
clap = { version = "4", features = ["derive"] }
async-std = { version = "1", features = ["attributes"] }
anyhow = "1"
colored = "3"
ignore = "^0.4"
phf = { version = "^0.11", features = ["macros"] }
